--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8">
-    <title>Julia Fukuyama</title>
+    <title>Ruth Winecoff</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Oxygen:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway"rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
     <link rel="stylesheet" media="all" href="/res/screen.css?v=20201102082904" type="text/css">
-    <link rel="alternate" type="application/atom+xml" title="Julia Fukuyama" href="/atom.xml">
+    <link rel="alternate" type="application/atom+xml" title="Ruth Winecoff" href="/atom.xml">
     <link rel="shortcut icon" href="/tree-round.png?v=20201102082904">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110259368-1"></script>
@@ -30,7 +30,6 @@
 	<li><a href="/software/" title="Software">Software</a></li>
 	<li><a href="/teaching/" title="Teaching">Teaching</a></li>
 	<li><a href="/cv.pdf" title="CV">CV</a></li>
-	<li><a href="https://github.com/jfukuyama"><img src="/github-mark-22px.png"></a></li>
       </ul>
     </header>
 
@@ -39,26 +38,16 @@
 </div>
 
 <div class=left>
-  <h1 id="julia-fukuyama">Julia Fukuyama</h1>
+  <h1 id="julia-fukuyama">Ruth Winecoff</h1>
 
-<p>I am an Assistant Professor in the Department of Statistics at Indiana University.</p>
+<p>I am a PhD Candidate in Public Affairs at Indiana University Bloomington.</p>
 
-<p>I received a PhD in Statistics from Stanford in 2017, where I was
-advised by <a href="http://statweb.stanford.edu/~susan/">Susan Holmes</a>.
-Following that, I spent a year as a postdoctoral research fellow in the Department of Computational
-Biology at the Fred Hutchinson Cancer Research Center in
-<a href="http://matsen.fredhutch.org">Erick Matsen’s</a> group.
-My undergraduate degree was from Yale, where I received a B.S. in Biology.</p>
+<p>My primary research area is the municipal bond market, in addition to public finance and policy analysis topics more broadly.</p>
 
-<p>I enjoy developing statistical and computational methods that help
-biologists understand complex, structured data. I have worked with
-<a href="http://med.stanford.edu/relmanlab.html">David Relman’s</a> group on the
-human microbiome and with
-<a href="https://sites.stanford.edu/blishlab/">Catherine Blish’s</a> group on
-natural killer cell repertoires.</p>
+<p>My dissertation is a network analysis of the private sector financial intermediaries who assist
+state and local governments in financing capital projects. </p>
 
-<p>My husband, <a href="http://www.jasonyuyanwu.com">Jason Wu</a>, studies Chinese
-public opinion.</p>
+<p>Prior to my doctoral work, I completed a Master of Public Affairs at Indiana University Bloomington and a Bachelors of Economics at University of North Carolina Chapel Hill. I don't understand </p>
 
 </div>
 
