front page edits

--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
       <h1><a href="/"></a></h1>
       <ul class="navigation">
 	<li><a href="/" title="Home">Home</a></li>
-	<li><a href="/research/" title="Research">Research</a></li>
-	<li><a href="/software/" title="Software">Software</a></li>
-	<li><a href="/teaching/" title="Teaching">Teaching</a></li>
 	<li><a href="/cv.pdf" title="CV">CV</a></li>
       </ul>
     </header>
@@ -40,14 +37,14 @@
 <div class=left>
   <h1 id="julia-fukuyama">Ruth Winecoff</h1>
 
-<p>I am a PhD Candidate in Public Affairs at Indiana University Bloomington.</p>
+<p>I am a PhD candidate in Public Affairs at Indiana University Bloomington.</p>
 
 <p>My primary research area is the municipal bond market, in addition to public finance and policy analysis topics more broadly.</p>
 
 <p>My dissertation is a network analysis of the private sector financial intermediaries who assist
 state and local governments in financing capital projects. </p>
 
-<p>Prior to my doctoral work, I completed a Master of Public Affairs at Indiana University Bloomington and a Bachelors of Economics at University of North Carolina Chapel Hill. I don't understand </p>
+<p>Prior to my doctoral work, I completed a Master of Public Affairs at Indiana University Bloomington and a Bachelor of Economics at University of North Carolina Chapel Hill.</p>
 
 </div>
 
