argh this photo

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
 
     <div class=right>
-  <img src="temp.png">
+  <img src="temp.png" width = "300" height = "400">
 </div>
 
 <div class=left>
