--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 <div class=left>
   <h1 id="julia-fukuyama">Ruth Winecoff</h1>
 
+ <p>I am not a cat. This is a work in progress.</p> 
+
 <p>I am a PhD candidate in Public Affairs at Indiana University Bloomington.</p>
 
 <p>My primary research area is the municipal bond market, in addition to public finance and policy analysis topics more broadly.</p>
