subbing in my real picture

--- a/index.html
+++ b/index.html
@@ -31,13 +31,11 @@
     </header>
 
     <div class=right>
-  <img src="temp.png" width = "300" height = "400">
+  <img src="Ruth Headshot 2b.png" width = "300" height = "400">
 </div>
 
 <div class=left>
   <h1 id="julia-fukuyama">Ruth Winecoff</h1>
-
- <p>I am not a cat. This is a work in progress.</p> 
 
 <p>I am a PhD candidate in Public Affairs at Indiana University Bloomington.</p>
 
