hopefully mobile friendly now - change to index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" media="all" href="/res/screen.css?v=20201102082904" type="text/css">
     <link rel="alternate" type="application/atom+xml" title="Ruth Winecoff" href="/atom.xml">
     <link rel="shortcut icon" href="/tree-round.png?v=20201102082904">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110259368-1"></script>
 <script>
@@ -31,7 +32,7 @@
     </header>
 
     <div class=right>
-  <img src="Ruth Headshot 2b.png" width = "308" height = "345">
+  <img src="Ruth Headshot 2b.png">
 </div>
 
 <div class=left>
