trying to stack photo and text - index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>Ruth Winecoff</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Oxygen:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway"rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
@@ -22,6 +21,7 @@
   gtag('config', 'UA-110259368-1');
 </script>
   </head>
+ 
   <body>
     <header class="main">
       <h1><a href="/"></a></h1>
@@ -31,11 +31,7 @@
       </ul>
     </header>
 
-    <div class=right>
-  <img src="Ruth Headshot 2b.png">
-</div>
-
-<div class=left>
+<div class="container">
   <h1 id="julia-fukuyama">Ruth Winecoff</h1>
 
 <p>I am a PhD candidate in Public Affairs at Indiana University Bloomington.</p>
@@ -46,6 +42,8 @@
 state and local governments in financing capital projects. </p>
 
 <p>Prior to my doctoral work, I completed a Master of Public Affairs at Indiana University Bloomington and a Bachelor of Economics at University of North Carolina Chapel Hill.</p>
+
+ <img src="Ruth Headshot 2b.png">
 
 </div>
 
