editing stylesheet to have a flexbox container

--- a/index.html
+++ b/index.html
@@ -31,11 +31,7 @@
       </ul>
     </header>
 
- <div class=right>
-  <img src="Ruth Headshot 2b.png">
-</div>
-
-<div class=left>
+<div class="container">
   <h1 id="julia-fukuyama">Ruth Winecoff</h1>
 
 <p>I am a PhD candidate in Public Affairs at Indiana University Bloomington.</p>
@@ -46,6 +42,8 @@
 state and local governments in financing capital projects. </p>
 
 <p>Prior to my doctoral work, I completed a Master of Public Affairs at Indiana University Bloomington and a Bachelor of Economics at University of North Carolina Chapel Hill.</p>
+
+ <img src="Ruth Headshot 2b.png">
 
 </div>
 
