--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </ul>
     </header>
 
-<div class="container">
+<div class="left">
   <h1 id="julia-fukuyama">Ruth Winecoff</h1>
 
 <p>I am a PhD candidate in Public Affairs at Indiana University Bloomington.</p>
