--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ state and local governments in financing capital projects. </p>
 
 <p>Prior to my doctoral work, I completed a Master of Public Affairs at Indiana University Bloomington and a Bachelor of Economics at University of North Carolina Chapel Hill.</p>
 
- <img src="Ruth Headshot 2b cropped.png">
+ <img src="Ruth Headshot 2b.png" alt = "Ruth Winecoff" class = "center">
 
 </div>
 
