--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@ state and local governments in financing capital projects. </p>
 
  <img src="Ruth Headshot 2b cropped.png" alt = "Ruth Winecoff" class = "center">
 
+ <h2 id="julia-fukuyama">Peer-Reviewed Publications</h2>
+
+	<ul class="navigation">
+	<li><a href="/mlf.pdf" title="mlf">mlf</a></li>
+	<li><a href="/ssq.pdf" title="ssq">ssq</a></li>
+      </ul>
+
+
+
 </div>
 
 
