tinkering with pubs code

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ state and local governments in financing capital projects. </p>
  <h2 id="julia-fukuyama">Peer-Reviewed Publications</h2>
 
 	<ul class="navigation">
-	<li><a href="/mlf.pdf" title="mlf">mlf</a></li>
+	<li><a href="/mlf.pdf" title="mlf">MLF</a></li>
 	<li><a href="/ssq.pdf" title="ssq">ssq</a></li>
       </ul>
 
