--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@ state and local governments in financing capital projects. </p>
 
  <h2 id="julia-fukuyama">Peer-Reviewed Publications</h2>
 
-	<ul class="navigation">
-	<li><a href="/mlf.pdf" title="mlf">MLF</a></li>
-	<li><a href="/ssq.pdf" title="ssq">ssq</a></li>
-      </ul>
+	
+	<p>href="/mlf.pdf" title="mlf">MLF</p>
+	<p> href="/ssq.pdf" title="ssq">ssq</p>
+ 
 
 
 
