--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@ state and local governments in financing capital projects. </p>
  <h2 id="julia-fukuyama">Peer-Reviewed Publications</h2>
 
 	
-	<p>href="/mlf.pdf" title="mlf">MLF</p>
-	<p> href="/ssq.pdf" title="ssq">ssq</p>
+	<p><a href="/mlf.pdf" title="mlf">MLF</a></p>
+	<p><a href="/ssq.pdf" title="ssq">ssq</a>a></p>
  
 
 
