--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@ state and local governments in financing capital projects. </p>
  <h2 id="julia-fukuyama">Peer-Reviewed Publications</h2>
 
 	
-	<p><a href="/mlf.pdf" title="mlf">MLF</a></p>
-	<p><a href="/ssq.pdf" title="ssq">ssq</a>a></p>
+	<p><a href="/mlf.pdf" title="mlf">Johnson, Craig L., Martin J. Luby, Tima T. Moldogaziev, and Ruth Winecoff. "The Federal Reserve Municipal Liquidity Facility (MLF): Where the Municipal Securities Market and Fed Finally Meet." Forthcoming in <i>Public Budgeting and Finance</i>, accepted June 2021.</a></p>
+	<p><a href="/ssq.pdf" title="ssq">ssq</a></p>
  
 
 
