trying to change links color

--- a/index.html
+++ b/index.html
@@ -11,6 +11,36 @@
     <link rel="alternate" type="application/atom+xml" title="Ruth Winecoff" href="/atom.xml">
     <link rel="shortcut icon" href="/tree-round.png?v=20201102082904">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+a:link {
+  color: green;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: pink;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+a:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: underline;
+}
+</style>
+
+
+
+    
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110259368-1"></script>
 <script>
