trying to change links color and underline

--- a/index.html
+++ b/index.html
@@ -14,33 +14,29 @@
 
 <style>
 a:link {
-  color: green;
+  color: black;
   background-color: transparent;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 a:visited {
-  color: pink;
+  color: grey;
   background-color: transparent;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 a:hover {
-  color: red;
+  color: green;
   background-color: transparent;
   text-decoration: underline;
 }
 
-a:active {
-  color: yellow;
-  background-color: transparent;
-  text-decoration: underline;
-}
+
 </style>
 
 
 
-    
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110259368-1"></script>
 <script>
