--- a/index.html
+++ b/index.html
@@ -75,7 +75,15 @@ state and local governments in financing capital projects. </p>
 
 	
 	<p><a href="/mlf.pdf" title="mlf">Johnson, Craig L., Martin J. Luby, Tima T. Moldogaziev, and Ruth Winecoff. "The Federal Reserve Municipal Liquidity Facility (MLF): Where the Municipal Securities Market and Fed Finally Meet." Forthcoming in <i>Public Budgeting and Finance</i>, accepted June 2021.</a></p>
-	<p><a href="/ssq.pdf" title="ssq">ssq</a></p>
+
+	<p><a href="/ssq.pdf" title="ssq">Winecoff, Ruth and Michelle Graff. "Innovation in Financing Energy Efficient and Renewable Energy Upgrades: An Evaluation of Property Assessed Clean Energy for California Residences." \textit{Social Science Quarterly} 101.7 (2020)</a></p>
+
+	<p><a href="https://www.researchgate.net/profile/Donghee-Shin-8/publication/347854107_Incentivizing_Innovation_in_a_Knowledge_Society/links/6041d72e4585154e8c78043c/Incentivizing-Innovation-in-a-Knowledge-Society.pdf" title="intro">Bianco, William, Keith Gaddie, John Rice, Don Shin, Henrik Stahl, Ruth Winecoff, and W.K. Winecoff. "Incentivizing Innovation in a Knowledge Society." \textit{Social Science Quarterly} 101.7 (2020).</a></p>
+
+		<p><a href="aca_hrs.pdf" title="aca_hrs">McInerney, Melissa, Ruth Winecoff, Padmaja Ayyagari, Kosali Simon, and M. Kate Bundorf. 
+		"New Evidence on the Effects of the ACA Medicaid Expansion on Near-Elderly Coverage: Insights from the Health and Retirement Study." \textit{INQUIRY: The Journal of Health Care Organization, Provision, and Financing} 57 (2020). In coordination with the National Bureau of Economic Research. Funded by the National Institute of Health. .</a></p>
+
+	<p><a href="https://books.google.com/books?hl=en&lr=&id=yKGkDwAAQBAJ&oi=fnd&pg=PA57&dq=ruth+winecoff&ots=hIoNsVRuEM&sig=yH1isZT2XcXvzrIv2thMD8H1OVo#v=onepage&q=ruth%20winecoff&f=false" title="tif">Luby, Martin J., T. T. Moldogaziev, Craig L. Johnson, and Ruth Winecoff. "The Use of Debt in Tax Increment Financing, 2000-2016." In Johnson, Craig L., and Kenneth A Kriz (eds.) \textit{Tax Increment Financing and Economic Development: Uses, Structures, and Impact.} 2nd Ed. Albany, NY: SUNY Press (2019).</a></p>
  
 
 
