--- a/index.html
+++ b/index.html
@@ -71,10 +71,15 @@ state and local governments in financing capital projects. </p>
 
  <img src="Ruth Headshot 2b cropped.png" alt = "Ruth Winecoff" class = "center">
 
+  <h2 id="julia-fukuyama">Job Market Paper</h2>
+
+	
+	<p><a href="/jmp.pdf" title="mlf">Winecoff, Ruth. "Do intermediary networks help reduce government borrowing costs? Evidence from nationwide data" 
+
  <h2 id="julia-fukuyama">Peer-Reviewed Publications</h2>
 
 	
-	<p><a href="/mlf.pdf" title="mlf">Johnson, Craig L., Martin J. Luby, Tima T. Moldogaziev, and Ruth Winecoff. "The Federal Reserve Municipal Liquidity Facility (MLF): Where the Municipal Securities Market and Fed Finally Meet." Forthcoming in <i>Public Budgeting and Finance</i>, accepted June 2021.</a></p>
+	<p><a href="/mlf.pdf" title="mlf">Johnson, Craig L., Martin J. Luby, Tima T. Moldogaziev, and Ruth Winecoff. "The Federal Reserve Municipal Liquidity Facility (MLF): Where the Municipal Securities Market and Fed Finally Meet." <i>Public Budgeting and Finance</i> 41.3 (2021). </a></p>
 
 	<p><a href="/ssq.pdf" title="ssq">Winecoff, Ruth and Michelle Graff. "Innovation in Financing Energy Efficient and Renewable Energy Upgrades: An Evaluation of Property Assessed Clean Energy for California Residences." <i> Social Science Quarterly </i> 101.7 (2020)</a></p>
 
