Updating to professor

--- a/index.html
+++ b/index.html
@@ -60,26 +60,19 @@ a:hover {
 <div class="left">
   <h1 id="julia-fukuyama">Ruth Winecoff</h1>
 
-<p>I am a PhD candidate in Public Affairs at Indiana University Bloomington.</p>
+<p>I am an assistant professor in the Edward J Bloustein School of Planning and Public Policy at Rutgers New Brunswick.</p>
 
 <p>My primary research area is the municipal bond market, in addition to public finance and policy analysis topics more broadly.</p>
 
-<p>My dissertation is a network analysis of the private sector financial intermediaries who assist
-state and local governments in financing capital projects. </p>
-
-<p>Prior to my doctoral work, I completed a Master of Public Affairs at Indiana University Bloomington and a Bachelor of Economics at University of North Carolina Chapel Hill.</p>
 
  <img src="Ruth Headshot 2b cropped.png" alt = "Ruth Winecoff" class = "center">
-
-  <h2 id="julia-fukuyama">Job Market Paper</h2>
-
-	
-	<p><a href="/jmp.pdf" title="mlf">Winecoff, Ruth. "Do intermediary networks help reduce government borrowing costs? Evidence from nationwide data" 
+ 
 
  <h2 id="julia-fukuyama">Peer-Reviewed Publications</h2>
 
-	
-	<p><a href="/mlf.pdf" title="mlf">Johnson, Craig L., Martin J. Luby, Tima T. Moldogaziev, and Ruth Winecoff. "The Federal Reserve Municipal Liquidity Facility (MLF): Where the Municipal Securities Market and Fed Finally Meet." <i>Public Budgeting and Finance</i> 41.3 (2021). </a></p>
+	<p><a href="/covidbonds.pdf" title="mlf">Yang, Lang (Kate). and Ruth Winecoff. "Municipal Bond Sectoral Risk and Information Intermediation in Uncertain Times: Evidence from the Covid-19 Pandemic." Forthcoming, <i>Public Budgeting and Finance</i> </a></p>
+
+	<p><a href="/tif.pdf">Johnson, Craig L. and Ruth Winecoff. "Changes in Public Policy and the Cost of Debt: Tax Increment Financing and the Case of the State of California’s Elimination of Redevelopment Agencies." <i>Municipal Finance Journal</i> 43.1 (2022). </a></p>
 
 	<p><a href="/ssq.pdf" title="ssq">Winecoff, Ruth and Michelle Graff. "Innovation in Financing Energy Efficient and Renewable Energy Upgrades: An Evaluation of Property Assessed Clean Energy for California Residences." <i> Social Science Quarterly </i> 101.7 (2020)</a></p>
 
