edward k bloustein, trying to remove underline

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@ a:hover {
 
  <h2 id="julia-fukuyama">Peer-Reviewed Publications</h2>
 
-	<p><a href="/covidbonds.pdf" title="mlf">Yang, Lang (Kate). and Ruth Winecoff. "Municipal Bond Sectoral Risk and Information Intermediation in Uncertain Times: Evidence from the Covid-19 Pandemic." Forthcoming, <i>Public Budgeting and Finance</i> </a></p>
+
+	<p><a style="text-decoration:none;" href="/covidbonds.pdf" title="mlf">Yang, Lang (Kate). and Ruth Winecoff. "Municipal Bond Sectoral Risk and Information Intermediation in Uncertain Times: Evidence from the Covid-19 Pandemic." Forthcoming, <i>Public Budgeting and Finance</i>. </a></p>
 
 	<p><a href="/tif.pdf">Johnson, Craig L. and Ruth Winecoff. "Changes in Public Policy and the Cost of Debt: Tax Increment Financing and the Case of the State of California’s Elimination of Redevelopment Agencies." <i>Municipal Finance Journal</i> 43.1 (2022). </a></p>
 
