--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@ a:hover {
 
 	<p><a style="text-decoration:none;" href="/covidbonds.pdf" title="mlf">Yang, Lang (Kate). and Ruth Winecoff. "Municipal Bond Sectoral Risk and Information Intermediation in Uncertain Times: Evidence from the Covid-19 Pandemic." Forthcoming, <i>Public Budgeting and Finance</i>. </a></p>
 
-	<p><a href="/tif.pdf">Johnson, Craig L. and Ruth Winecoff. "Changes in Public Policy and the Cost of Debt: Tax Increment Financing and the Case of the State of California’s Elimination of Redevelopment Agencies." <i>Municipal Finance Journal</i> 43.1 (2022). </a></p>
+	<p><a style="text-decoration:none;" href="/tif.pdf">Johnson, Craig L. and Ruth Winecoff. "Changes in Public Policy and the Cost of Debt: Tax Increment Financing and the Case of the State of California’s Elimination of Redevelopment Agencies." <i>Municipal Finance Journal</i> 43.1 (2022). </a></p>
 
-	<p><a href="/ssq.pdf" title="ssq">Winecoff, Ruth and Michelle Graff. "Innovation in Financing Energy Efficient and Renewable Energy Upgrades: An Evaluation of Property Assessed Clean Energy for California Residences." <i> Social Science Quarterly </i> 101.7 (2020)</a></p>
+	<p><a style="text-decoration:none;" href="/ssq.pdf" title="ssq">Winecoff, Ruth and Michelle Graff. "Innovation in Financing Energy Efficient and Renewable Energy Upgrades: An Evaluation of Property Assessed Clean Energy for California Residences." <i> Social Science Quarterly </i> 101.7 (2020)</a></p>
 
-	<p><a href="https://www.researchgate.net/profile/Donghee-Shin-8/publication/347854107_Incentivizing_Innovation_in_a_Knowledge_Society/links/6041d72e4585154e8c78043c/Incentivizing-Innovation-in-a-Knowledge-Society.pdf" title="intro">Bianco, William, Keith Gaddie, John Rice, Don Shin, Henrik Stahl, Ruth Winecoff, and W.K. Winecoff. "Incentivizing Innovation in a Knowledge Society." <i> Social Science Quarterly </i> 101.7 (2020).</a></p>
+	<p><a style="text-decoration:none;" href="https://www.researchgate.net/profile/Donghee-Shin-8/publication/347854107_Incentivizing_Innovation_in_a_Knowledge_Society/links/6041d72e4585154e8c78043c/Incentivizing-Innovation-in-a-Knowledge-Society.pdf" title="intro">Bianco, William, Keith Gaddie, John Rice, Don Shin, Henrik Stahl, Ruth Winecoff, and W.K. Winecoff. "Incentivizing Innovation in a Knowledge Society." <i> Social Science Quarterly </i> 101.7 (2020).</a></p>
 
-		<p><a href="aca_hrs.pdf" title="aca_hrs">McInerney, Melissa, Ruth Winecoff, Padmaja Ayyagari, Kosali Simon, and M. Kate Bundorf. 
+		<p><a style="text-decoration:none;" href="aca_hrs.pdf" title="aca_hrs">McInerney, Melissa, Ruth Winecoff, Padmaja Ayyagari, Kosali Simon, and M. Kate Bundorf. 
 		"New Evidence on the Effects of the ACA Medicaid Expansion on Near-Elderly Coverage: Insights from the Health and Retirement Study." <i> INQUIRY: The Journal of Health Care Organization, Provision, and Financing </i> 57 (2020). In coordination with the National Bureau of Economic Research. Funded by the National Institute of Health. .</a></p>
 
-	<p><a href="https://books.google.com/books?hl=en&lr=&id=yKGkDwAAQBAJ&oi=fnd&pg=PA57&dq=ruth+winecoff&ots=hIoNsVRuEM&sig=yH1isZT2XcXvzrIv2thMD8H1OVo#v=onepage&q=ruth%20winecoff&f=false" title="tif">Luby, Martin J., T. T. Moldogaziev, Craig L. Johnson, and Ruth Winecoff. "The Use of Debt in Tax Increment Financing, 2000-2016." In Johnson, Craig L., and Kenneth A Kriz (eds.) <i> Tax Increment Financing and Economic Development: Uses, Structures, and Impact.</i> 2nd Ed. Albany, NY: SUNY Press (2019).</a></p>
+	<p><a style="text-decoration:none;" href="https://books.google.com/books?hl=en&lr=&id=yKGkDwAAQBAJ&oi=fnd&pg=PA57&dq=ruth+winecoff&ots=hIoNsVRuEM&sig=yH1isZT2XcXvzrIv2thMD8H1OVo#v=onepage&q=ruth%20winecoff&f=false" title="tif">Luby, Martin J., T. T. Moldogaziev, Craig L. Johnson, and Ruth Winecoff. "The Use of Debt in Tax Increment Financing, 2000-2016." In Johnson, Craig L., and Kenneth A Kriz (eds.) <i> Tax Increment Financing and Economic Development: Uses, Structures, and Impact.</i> 2nd Ed. Albany, NY: SUNY Press (2019).</a></p>
  
 
 
