--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 a:link {
   color: black;
   background-color: transparent;
+  text-decoration: none;
 }
 
 a:visited {
   color: grey;
   background-color: transparent;
+  text-decoration: none;
 }
 
 a:hover {
@@ -68,7 +70,7 @@ a:hover {
 
  <h2 id="julia-fukuyama">Peer-Reviewed Publications</h2>
 
-  <p><a style="text-decoration:none;" href="/529.pdf" title="mlf">Heim, Bradley T. and Ruth Winecoff. "The Impact of State 529 Plan Tax Incentives on  Take-Up and Savings." <i>Public Finance Review</i> 51.4 (2023). </a></p>
+  <p><a> href="/529.pdf" title="mlf">Heim, Bradley T. and Ruth Winecoff. "The Impact of State 529 Plan Tax Incentives on  Take-Up and Savings." <i>Public Finance Review</i> 51.4 (2023). </a></p>
 
 	<p><a style="text-decoration:none;" href="/covidbonds.pdf" title="mlf">Yang, Lang (Kate). and Ruth Winecoff. "Municipal Bond Sectoral Risk and Information Intermediation in Uncertain Times: Evidence from the Covid-19 Pandemic." <i>Public Budgeting and Finance</i>. 42.2 (2022). </a></p>
 
