--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
+a {
+  text-decoration: none;
+}
+ 
 a:link {
   color: black;
   background-color: transparent;
