--- a/index.html
+++ b/index.html
@@ -11,7 +11,28 @@
     <link rel="alternate" type="application/atom+xml" title="Ruth Winecoff" href="/atom.xml">
     <link rel="shortcut icon" href="/tree-round.png?v=20201102082904">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+    <style>
+    a {
+      text-decoration: none;
+    }
+     
+    a:link {
+      color: black;
+      background-color: transparent;
+       text-decoration: none;     
+    }
+
+    a:visited {
+      color: grey;
+      background-color: transparent;
+      text-decoration: none;      
+    }
+
+    a:hover {
+      color: green;
+      background-color: transparent;
+    }
+    </style>
 
 
 
