--- a/index.html
+++ b/index.html
@@ -12,29 +12,13 @@
     <link rel="shortcut icon" href="/tree-round.png?v=20201102082904">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-    a {
-      text-decoration: none;
-    }
-     
-    a:link {
-      color: black;
-      background-color: transparent;
-       text-decoration: none;     
-    }
-
-    a:visited {
-      color: grey;
-      background-color: transparent;
-      text-decoration: none;      
-    }
-
-    a:hover {
-      color: green;
-      background-color: transparent;
-    }
+      a {
+        color: red;
+        text-decoration: none;
+        text-transform: uppercase;
+      }
+    
     </style>
-
-
 
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
