--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link href="https://fonts.googleapis.com/css?family=Oxygen:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway"rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+    <link rel="stylesheet" media="all" href="/res/screen.css?v=20201102082904" type="text/css">
     <link rel="alternate" type="application/atom+xml" title="Ruth Winecoff" href="/atom.xml">
     <link rel="shortcut icon" href="/tree-round.png?v=20201102082904">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       a {
-        color: blue;
+        color: red;
         text-decoration: none;
         text-transform: uppercase;
       }
