--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       a {
-        color: blue;
+        color: black;
         text-decoration: none;
       }
     
