--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 
 	<p><a style="text-decoration:none;" href="/tif.pdf">Johnson, Craig L. and Ruth Winecoff. "Changes in Public Policy and the Cost of Debt: Tax Increment Financing and the Case of the State of California’s Elimination of Redevelopment Agencies." <i>Municipal Finance Journal</i> 43.1 (2022). </a></p>
 
+  <p><a style="text-decoration:none;" href="/mlf.pdf"> Johnson, Craig L., Martin J. Luby, Tima T. Moldogaziev, and Ruth Winecoff. "The Federal Reserve Municipal Liquidity Facility (MLF): Where the Municipal Securities Market and Fed Finally Meet." <i>Public Budgeting and Finance</i>i> 41.3 (2021). </a></p>
+
 	<p><a style="text-decoration:none;" href="/ssq.pdf" title="ssq">Winecoff, Ruth and Michelle Graff. "Innovation in Financing Energy Efficient and Renewable Energy Upgrades: An Evaluation of Property Assessed Clean Energy for California Residences." <i> Social Science Quarterly </i> 101.7 (2020).</a></p>
 
 	<p><a style="text-decoration:none;" href="https://www.researchgate.net/profile/Donghee-Shin-8/publication/347854107_Incentivizing_Innovation_in_a_Knowledge_Society/links/6041d72e4585154e8c78043c/Incentivizing-Innovation-in-a-Knowledge-Society.pdf" title="intro">Bianco, William, Keith Gaddie, John Rice, Don Shin, Henrik Stahl, Ruth Winecoff, and W.K. Winecoff. "Incentivizing Innovation in a Knowledge Society." <i> Social Science Quarterly </i> 101.7 (2020).</a></p>
