--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@
 <p>My primary research area is the municipal bond market, in addition to public finance and policy analysis topics more broadly.</p>
 
 
- <img src="Ruth Headshot 2b cropped.png" alt = "Ruth Winecoff" class = "center">
+ <img src="APD_RuthWinecoff05.jpg" alt = "Ruth Winecoff" class = "center">
  
 
  <h2 id="julia-fukuyama">Peer-Reviewed Publications</h2>
 
-  <p><a href="/529.pdf" title="529">Heim, Bradley T. and Ruth Winecoff. "The Impact of State 529 Plan Tax Incentives on  Take-Up and Savings." <i>Public Finance Review</i> 51.4 (2023). </a></p>
+  <p><a href="/529.pdf" title="529" target="_blank" >Heim, Bradley T. and Ruth Winecoff. "The Impact of State 529 Plan Tax Incentives on  Take-Up and Savings." <i>Public Finance Review</i> 51.4 (2023). </a></p>
 
 	<p><a style="text-decoration:none;" href="/covidbonds.pdf" title="mlf">Yang, Lang (Kate). and Ruth Winecoff. "Municipal Bond Sectoral Risk and Information Intermediation in Uncertain Times: Evidence from the Covid-19 Pandemic." <i>Public Budgeting and Finance</i>. 42.2 (2022). </a></p>
 
 	<p><a style="text-decoration:none;" href="/tif.pdf">Johnson, Craig L. and Ruth Winecoff. "Changes in Public Policy and the Cost of Debt: Tax Increment Financing and the Case of the State of California’s Elimination of Redevelopment Agencies." <i>Municipal Finance Journal</i> 43.1 (2022). </a></p>
 
-  <p><a style="text-decoration:none;" href="/mlf.pdf"> Johnson, Craig L., Martin J. Luby, Tima T. Moldogaziev, and Ruth Winecoff. "The Federal Reserve Municipal Liquidity Facility (MLF): Where the Municipal Securities Market and Fed Finally Meet." <i>Public Budgeting and Finance</i>i> 41.3 (2021). </a></p>
+  <p><a style="text-decoration:none;" href="/mlf.pdf"> Johnson, Craig L., Martin J. Luby, Tima T. Moldogaziev, and Ruth Winecoff. "The Federal Reserve Municipal Liquidity Facility (MLF): Where the Municipal Securities Market and Fed Finally Meet." <i>Public Budgeting and Finance</i> 41.3 (2021). </a></p>
 
 	<p><a style="text-decoration:none;" href="/ssq.pdf" title="ssq">Winecoff, Ruth and Michelle Graff. "Innovation in Financing Energy Efficient and Renewable Energy Upgrades: An Evaluation of Property Assessed Clean Energy for California Residences." <i> Social Science Quarterly </i> 101.7 (2020).</a></p>
 
