--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
 <div class="left">
   <h1 id="julia-fukuyama">Ruth Winecoff</h1>
 
-<p>I am an assistant professor in the Edward J Bloustein School of Planning and Public Policy at Rutgers New Brunswick.</p>
-
-<p>My primary research area is the municipal bond market, in addition to public finance and policy analysis topics more broadly.</p>
+<p>I am an assistant professor in the Edward J Bloustein School of Planning and Public Policy at Rutgers New Brunswick. My primary research area is the municipal bond market, in addition to public finance and policy analysis topics more broadly.</p>
 
 
  <img src="APD_RuthWinecoff05.jpg" alt = "Ruth Winecoff" class = "center">
